--- a/client/feedclient/src/app/app.component.html
+++ b/client/feedclient/src/app/app.component.html
@@ -1,3 +1,34 @@
-<h1>Feed Serviiiice</h1>
-<app-feeds></app-feeds>
+<!DOCTYPE html>
+<html>
+  <head>
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  </head>
+  <body>
+    
+    <mat-toolbar>
+      <h1>AnuglarJS Material</h1>
+    </mat-toolbar>
+    
+    <app-feeds></app-feeds>
+
+    <div 
+      fxLayout="row wrap"
+      fxLayout.lt-sm="column" 
+      fxLayoutGap="32px" 
+      fxLayoutAlign="flex-start">
+      <ng-container *ngFor="let _ of [1,2,3,4,5,6]">
+        <app-card 
+          fxFlex="0 1 calc(33.3% - 32px)"
+          fxFlex.lt-md="0 1 calc(50% - 32px)"
+          fxFlex.lt-sm="100%"
+        >
+          
+        
+        </app-card>
+      </ng-container>
+        
+     </div>
+  </body>
+</html>
+
 
