add history collection in db and adjust mvc

--- a/client/feedclient/src/app/app.component.html
+++ b/client/feedclient/src/app/app.component.html
@@ -6,11 +6,10 @@
   <body>
     
     <mat-toolbar>
-      <h1>AnuglarJS Material</h1>
+      <h1>Feeeed it up</h1>
     </mat-toolbar>
     
     <app-feeds></app-feeds>
-
     <div 
       fxLayout="row wrap"
       fxLayout.lt-sm="column" 
