--- a/client/feedclient/src/app/history/history.component.html
+++ b/client/feedclient/src/app/history/history.component.html
@@ -1,6 +1,16 @@
-<div *ngIf="records">
-    <div *ngFor="let record of records"> History
-      <div>Date: {{ record.id | date: 'medium' }}</div>
-      <div>Number of Products: {{ record.number_of_items}}</div>
-    </div>
+<!-- <div *ngIf="records">
+  <div *ngFor="let record of records"> History
+    <div>Date: {{ record.id | date: 'medium' }}</div>
+    <div>Number of Products: {{ record.number_of_items}}</div>
   </div>
+</div> -->
+
+<div *ngIf="records" class="history-box">
+  <div class="history-title"><h4>History</h4></div>
+  <mat-list role="list" *ngFor="let record of records">
+    <mat-list-item role="listitem">
+      <i class="material-icons">calendar_today</i>{{ record.id | date: 'short' }}.
+      <i class="material-icons">done</i>{{ record.number_of_items }} products in the feed.
+    </mat-list-item>
+  </mat-list>
+</div>
