add mongoose insertMany and work on angular linechart component

--- a/client/feedclient/src/app/app.component.html
+++ b/client/feedclient/src/app/app.component.html
@@ -21,17 +21,17 @@
     > 
       <div class="herohead">
           <div class="image-container">
-            <p>Fetch product data from website</p>
+            <p>1. Fetch product data from website</p>
             <img src="../assets/website-data-color.png" class="responsive">
           </div>
           <i class="material-icons md-36">arrow_forward_ios</i>
           <div class="image-container">
-            <p>Save & Sent It to Publishers</p>
+            <p>2. Save & Sent It to Publishers</p>
             <img src="../assets/cloud-computing.png" class="responsive">
           </div>
           <i class="material-icons md-36">arrow_forward_ios</i>
           <div class="image-container">
-            <p>Show dynamic ads on Google or Facebook!</p>
+            <p>3. Show dynamic ads on Google or Facebook!</p>
             <img src="../assets/Facebooks-Dynamic-Ad-Illustration.jpg" class="responsive">
           </div>
       </div>
