--- a/client/feedclient/src/app/history/history.component.css
+++ b/client/feedclient/src/app/history/history.component.css
@@ -11,4 +11,11 @@
   /* border: 1px solid green;
   background-color: azure; */
 }
+/* 
+app-bar-chart {
+  width: 50%;
+  border: 1px solid lightgray;
+} */
+
+
 
