--- a/client/feedclient/src/app/app.component.css
+++ b/client/feedclient/src/app/app.component.css
@@ -1,8 +1,3 @@
-.dev {
-  border: 1px solid black;
-  border-radius: 8px;
-}
-
 hr.hr-color {
   border-top: 1px dashed lightgray;
 }
@@ -31,19 +26,24 @@ hr.hr-color {
   /* border: 1px solid black; */
 }
 
-/* .responsive {
-  width: 30%;
-} */
-
 .username {
-  /* border: 1px solid red; */
   display: flex;
   justify-content: flex-end;
   flex: 1 1 auto;
 }
 
+.history {
+  display: flex;
+  justify-content: center;
+  background-color: #f5f5f5; 
+}
+
+.feeds {
+  background-color: #f5f5f5;
+}
  /* Rules for sizing the icon. */
  .material-icons.md-18 { font-size: 18px; }
  .material-icons.md-24 { font-size: 24px; }
  .material-icons.md-36 { font-size: 36px; }
  .material-icons.md-48 { font-size: 48px; }
+
