--- a/client/feedclient/src/app/app.component.html
+++ b/client/feedclient/src/app/app.component.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-  <head>
-      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  </head>
-  <body>
+
     <mat-toolbar>
       <i class="material-icons md-36">home</i>
       <h1>How It Works</h1>
@@ -35,28 +30,8 @@
             <img src="../assets/Facebooks-Dynamic-Ad-Illustration.jpg" class="responsive">
           </div>
       </div>
-      <div fxFlex="0 1 100%" class="dev history"><app-history></app-history></div>
-      <div fxFlex="0 1 100%" class="dev"><app-feeds></app-feeds></div>
+      <div fxFlex="0 1 100%" class="history"><app-history></app-history></div>
+      <div fxFlex="0 1 100%" class="feeds"><app-feeds></app-feeds></div>
     </div>
     
-    <!-- <div 
-      fxLayout="row wrap"
-      fxLayout.lt-sm="column" 
-      fxLayoutGap="32px" 
-      fxLayoutAlign="flex-start">
-        <app-card 
-          fxFlex="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%"
-        >
-        </app-card>
-
-        <app-card 
-          fxFlex="0 1 calc(50% - 32px)"
-          fxFlex.lt-sm="100%"
-        >
-        </app-card>
-     </div> -->
-  </body>
-</html>
-
 
