--- a/client/feedclient/src/app/history/history.component.css
+++ b/client/feedclient/src/app/history/history.component.css
@@ -2,20 +2,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: #f5f5f5;
   /* border: 1px solid green; */
 }
 
 .history-title {
-  display: flex;
-  flex: 0 0 100%;
-  /* border: 1px solid green;
-  background-color: azure; */
+  font-size: 1.2rem;
 }
-/* 
-app-bar-chart {
-  width: 50%;
-  border: 1px solid lightgray;
-} */
 
 
 
