--- a/client/feedclient/src/app/history/history.component.html
+++ b/client/feedclient/src/app/history/history.component.html
@@ -4,10 +4,11 @@
     <div>Number of Products: {{ record.number_of_items}}</div>
   </div>
 </div> -->
-<div *ngIf="records">
+<div *ngIf="records" class="history-box">
+  <div class="history-title"><p>Prevous Updates</p></div>
   <app-line-chart [records]="records"></app-line-chart>
 </div>
-
+<!-- 
 <div *ngIf="records" class="history-box">
   <div class="history-title"><h3>Previous Updates</h3></div>
   <mat-list role="list" *ngFor="let record of records">
@@ -16,4 +17,4 @@
       <i class="material-icons">done</i>{{ record.number_of_items }} products in the feed.
     </mat-list-item>
   </mat-list>
-</div>
+</div> -->
