--- a/client/feedclient/src/app/line-chart/line-chart.component.css
+++ b/client/feedclient/src/app/line-chart/line-chart.component.css
@@ -2,6 +2,8 @@
   height: inherit;
   width: inherit;
   border: 1px solid lightgray;
+  display: flex;
+  justify-content: center;
 }
 
 .bar {
@@ -14,4 +16,15 @@
 
 .axis--x path {
   display: none;
+}
+
+.toolTip {
+  position: absolute;
+  display: none;
+  min-width: 80px;
+  height: auto;
+  background: none repeat scroll 0 0 #ffffff;
+  border: 1px solid #6F257F;
+  padding: 14px;
+  text-align: center;
 }
