fix x-axis with hardcoded value

--- a/client/feedclient/src/app/app.component.html
+++ b/client/feedclient/src/app/app.component.html
@@ -30,7 +30,7 @@
             <img src="../assets/Facebooks-Dynamic-Ad-Illustration.jpg" class="responsive">
           </div>
       </div>
-      <div fxFlex="0 1 100%" class="history"><app-history></app-history></div>
+      <div class="history"><app-history></app-history></div>
       <div fxFlex="0 1 100%" class="feeds"><app-feeds></app-feeds></div>
     </div>
     
