--- a/client/feedclient/src/app/history/history.component.html
+++ b/client/feedclient/src/app/history/history.component.html
@@ -5,7 +5,7 @@
   </div>
 </div> -->
 <div *ngIf="records" class="history-box">
-  <div class="history-title"><p>Prevous Updates</p></div>
+  <div class="history-title"><p>Previous Updates</p></div>
   <app-line-chart [records]="records"></app-line-chart>
 </div>
 <!-- 
