--- a/client/feedclient/src/app/app.component.css
+++ b/client/feedclient/src/app/app.component.css
@@ -33,8 +33,9 @@ hr.hr-color {
 }
 
 .history {
-  display: flex;
-  justify-content: center;
+  /* display: flex;
+  justify-content: space-around; */
+  text-align: center;
   background-color: #f5f5f5; 
 }
 
