--- a/client/feedclient/src/app/feeds/feeds.component.html
+++ b/client/feedclient/src/app/feeds/feeds.component.html
@@ -1,12 +1,15 @@
 <div class="feeds-box">
-  <button mat-raised-button color="primary" (click)="getStatus()">Preview Latest (max 20 items)</button>
+  <button mat-raised-button color="primary" (click)="getStatus()">Click to Preview the Latest (max 20 items)</button>
 </div>
 <hr/>
 <div *ngIf="feeds">
     <table *ngIf="feeds" mat-table [dataSource]="feeds" class="mat-elevation-z8">
         <!--- Note that these columns can be defined in any order.
               The actual rendered columns are set as a property on the row definition" -->
-      
+        <ng-container matColumnDef="index">
+          <th mat-header-cell *matHeaderCellDef class="bold-font"> No. </th>
+          <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
+        </ng-container>
         <!-- Title Column -->
         <ng-container matColumnDef="title">
           <th mat-header-cell *matHeaderCellDef class="bold-font"> Title </th>
@@ -16,7 +19,7 @@
         <!-- Product ID Column -->
         <ng-container matColumnDef="productId">
           <th mat-header-cell *matHeaderCellDef class="bold-font"> Product ID </th>
-          <td mat-cell *matCellDef="let element"> {{element.productId}} </td>
+          <td mat-cell *matCellDef="let element"> {{element.id}} </td>
         </ng-container>
       
         <!-- Price Column -->
