--- a/client/feedclient/src/app/history/history.component.css
+++ b/client/feedclient/src/app/history/history.component.css
@@ -1,14 +1,23 @@
+
 .history-box {
-  display: flex;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #f5f5f5;
+  background-color: #f5f5f5; */
   /* border: 1px solid green; */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
-
+/* 
 .history-title {
-  font-size: 1.2rem;
-}
+  display: flex;
+  flex: 0 0 100%;
+  font-size: 1.2rem; 
+  border: 1px solid red;
+} 
+*/
 
 
 
